2019-12-24 Fred Kiefer <FredKiefer@gmx.de>

	* gui/Classes/NSButton-test/NSButton-test.m: Add rounded pull down button.

2014-02-01 German A. Arias <germanandre@gmx.es>

	* gui/PowerPaint: Add new example for document based app. A simple
	graphic editor.

2013-08-22 Adam Fedor <fedor@gnu.org>

	* Version 1.4.0

2013-05-15 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* gui/Classes/NSPanelTest/NSPanelTest.m
	  convert to UTF-8
	* gui/Classes/NSScreenTest/screen_main.m
	  some NSInteger conversions
	* gui/CurrencyConverter/CurrencyConverter.h
	  the CurrencyConverter honours NSTextFieldDelegate protocol
	* gui/ExampleService/example.m
	  fix implicit declaration of fork and setsid
	* gui/GSTest/NSTableView-test/NSTableView-test.m
	  gui/GSTest/NSOutlineView-test/NSOutlineView-test.m
	  some NSInteger conversions
	* gui/GFractal/FractalView.m
	  some CGFloat conversions
	* gui/GSTest/CoordinateCheck-test/CoordinateCheck-test.m
	  move @interface before @implementation
	* gui/GSTest/Controller.m
	  fix cast

2010-06-02  Adam Fedor  <fedor@gnu.org>

	* Version 1.3.0

2007-05-24  Adam Fedor  <fedor@gnu.org>

	* Version 1.2.0
	* Update makefiles for new filesystem directories
	* Some new examples

2006-09-11  Adam Fedor  <fedor@gnu.org>

	* Version 1.1.0

2004-09-23  Adam Fedor  <fedor@gnu.org>

	* Version 1.0.0